<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/lay1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardlay2"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/profileID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/patientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_meena"
                android:textColor="@color/primary"/>

            <TextView
                android:id="@+id/GenderAgeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_23"
                android:textColor="@color/primary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_id"
                android:textColor="@color/primary"/>

            <TextView
                android:id="@+id/patientID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_87_20200727153457"
                android:textSize="12sp"
                android:textColor="@color/primary"/>


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/profileID"
        android:layout_marginStart="172dp"
        android:src="@drawable/human"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ao" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        style="@style/divider_lines"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardlay2"
        android:layout_width="match_parent"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/goal_reached"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <me.tankery.lib.circularseekbar.CircularSeekBar
                    android:id="@+id/circularSeekBar"
                    android:layout_width="455dp"
                    android:layout_height="173dp"
                    android:layout_marginTop="12dp"
                    app:cs_circle_color="@color/white"
                    app:cs_circle_fill="@color/primary"
                    app:cs_circle_progress_color="#FCB000"

                    app:cs_circle_stroke_width="15dp"
                    app:cs_circle_style="square"
                    app:cs_circle_x_radius="0dp"
                    app:cs_circle_y_radius="0dp"
                    app:cs_disable_pointer="true"
                    app:cs_disable_progress_glow="true"
                    app:cs_end_angle="0"
                    app:cs_hide_progress_when_empty="false"
                    app:cs_lock_enabled="true"
                    app:cs_maintain_equal_circle="true"
                    app:cs_max="100"
                    app:cs_move_outside_circle="true"
                    app:cs_negative_enabled="false"
                    app:cs_pointer_color="@android:color/transparent"
                    app:cs_pointer_halo_border_width="0dp"
                    app:cs_pointer_halo_color="@color/primary"
                    app:cs_pointer_halo_color_ontouch="@color/primary"
                    app:cs_pointer_halo_width="0dp"
                    app:cs_pointer_stroke_width="0dp"
                    app:cs_progress="40"


                    app:cs_start_angle="180"
                    app:cs_use_custom_radii="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.266"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="VisualLintBounds" />

                <TextView
                    android:id="@+id/progressNO"
                    style="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_40"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.345"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.771" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/emgCard"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="44dp"
                    android:background="@drawable/greenprogress"
                    android:elevation="10dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:contentDescription="@string/emg"
                        android:src="@drawable/greenprogress"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/emgw"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp,TextSizeCheck" />

                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emgCard"
                    app:layout_constraintVertical_bias="1.0">


                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="19dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="2dp"
                        android:src="@drawable/redrom"
                        android:contentDescription="@string/rom" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/rom2"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp,TextSizeCheck" />


                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"
        android:id="@+id/lay3"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/cardlay2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34"
                android:text="@string/phone_no"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/_8022334455"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/baseline_call_24" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/mail_id"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/EmailID"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:maxLines="1"
                android:text="@string/meenarabinsachin2_gmail_com"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/outline_email_24" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34"
                android:text="@string/affected_side"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:gravity="start|center"
                android:drawableLeft="@drawable/hooman"
                android:text="@string/billateral"
                android:textSize="15sp"
                tools:ignore="UseCompatTextViewDrawableXml" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34"
                android:text="@string/condition"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:drawableStart="@drawable/joinn"
                android:text="@string/ortho"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34"
                android:text="@string/speciality"
                android:textSize="15sp"
                />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/osteoarthritis"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/baseline_medical_services_24" />


        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/view"
        style="@style/divider_lines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay3"
        app:layout_constraintVertical_bias="0.033" />

    <LinearLayout
        android:id="@+id/lay55"
        android:layout_width="382dp"
        android:layout_height="42dp"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.049">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="40"
            android:gravity="start|center"
            android:text="@string/medical_history"
            android:maxLines="1"
            android:textColor="@color/primary"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/report" />

        <TextView

            android:id="@+id/medBackgroundid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:layout_gravity="center"
            android:paddingBottom="6dp"
            android:text="@string/hypertension_dm_hypothyrodism"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        style="@style/divider_lines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay55"
        app:layout_constraintVertical_bias="0.031" />


</androidx.constraintlayout.widget.ConstraintLayout>